Thu Jul 15 21:52:12 2004  Johnnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/NodeDaemon_Impl.h:
        * DAnCE/tests/NodeApplicationTest/NodeAppTest_RoundTrip.idl:
          Fixed incorrect doxygen file tag

Wed Jul 14 10:40:41 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	  (init):
	* DAnCE/NodeManager/NodeDaemon_Impl.cpp (preparePlan):

	  Fixed "control reaches end of non-void function" warning.

	* DAnCE/ExecutionManager/ExecutionManager_Impl.cpp
	  (ExecutionManager_Impl):
	* DAnCE/ciao/NodeApplication_Impl.cpp:

	  Corrected emulated exception macro usage.

	  Fixed "unused parameter" warning.

Wed Jul 14 08:46:24 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CCF/CCF/CIDL/CIDL.mpc:
	* CCF/CCF/IDL2/IDL2.mpc:

	  Fixed the MPC files that were busted.

Tue Jul 13 09:49:50 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* docs/releasenotes/index.html: Updated release notes with
	  information on static configurator and Nanbor's examples for
	  composition of RT applications using real-time extensions in
	  CIAO.

Tue Jul 13 04:27:19 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* performance-tests/Protocols/Controller/Controller.cpp:

	  Removed unused variable.

Mon Jul 12 11:06:54 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Documentation/Build.html: Fixed a few URLs. Thanks to
	  Matthew Gillen <mgillen@bbn.com> for reporting this.

Sun Jul 11 06:07:12 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/XML_Helpers/Assembly_Handlers.inl:
        * tools/XML_Helpers/RTConfig_Handlers.inl:
        * tools/XML_Helpers/Softpkg_Handlers.inl:
          Fixed compile errors in Borland build, use full namespaces for the
          baseclass

Fri Jul  9 20:36:14 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.inl:

	  Fixed a warning.
