@@ -1,3 +1,10 @@
+Sun Jul 18 12:53:04 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* DAnCE/tests/NodeApplicationTest/NodeApp_test_client.cpp (main):
+
+	  Fixed "better conversion sequence" warning by using component
+	  reference ".in()" accessor.
+
 Thu Jul 15 21:52:12 2004  Johnnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/NodeManager/NodeDaemon_Impl.h:
